# ldmx-framework-bench

./: .dockerignore  .gitignore  .gitmodules  .ldmxrc  CMakeLists.txt  Dockerfile  README.md  config.py  env.sh  environment_notes.md  h5-run.cpp  hdf5_produce.py  hdf5_recon.py  produce.py  recon.py  root_produce.py  rootless-env.sh
.github/workflows/: bench.sh  bench.yml  bench_plot.py  ci.yml
Bench/: CMakeLists.txt  README.md  bench_plot.ipynb  double_data.csv  plot.py  run.sh  user_class_data.csv
Bench/include/Bench/: Version.h.in
Bench/include/Bench/Event/: Hit.h
Bench/results/: README.md  data.csv  umn_data.csv
Bench/src/Bench/: Produce.cxx  Recon.cxx
Bench/src/Bench/Event/: Hit.cxx
include/fire/: Event.hpp  Process.hpp
include/fire/h5/: DataSet.hpp  File.hpp  Serializer.hpp
test/: CMakeLists.txt  atomics.cpp  dataset.cpp  user_class.cpp  vector_atomics.cpp  vector_user_class.cpp
